--- a/app/globals.css
+++ b/app/globals.css
@@ -8,14 +8,68 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: #bf000f;
+  --color-secondary: #282828;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* SEARCHBAR INPUT */
+.searchbar-input {
+  @apply flex-1 min-w-[200px] w-full p-3 border border-gray-300 rounded-lg shadow-xs text-base text-gray-500 focus:outline-none;
+}
+
+.searchbar-btn {
+  @apply bg-gray-900 border border-gray-900 rounded-lg shadow-xs px-5 py-3 text-white text-base font-semibold hover:opacity-90 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-40;
+}
+
+
+/* CAROUSEL */
+.hero-carousel {
+  @apply relative sm:px-10 py-5 sm:pt-20 pb-5 max-w-[560px] h-[700px] w-full bg-[#F2F4F7] rounded-[30px] sm:mx-auto;
+}
+
+.carousel {
+  @apply flex flex-col-reverse h-[700px];
+}
+
+.carousel .control-dots {
+  @apply static;
+}
+
+.carousel .control-dots .dot {
+  @apply w-[10px] h-[10px] bg-[#D9D9D9] rounded-full bottom-0;
+}
+
+.carousel .control-dots .dot.selected {
+  @apply bg-[#475467];
+}
+
+
+
+
+/* NAVBAR */
+.nav {
+  @apply flex justify-between items-center px-6 md:px-20 py-4;
+}
+
+.nav-logo {
+  @apply text-[21px] text-secondary font-bold;
+}
+
+.head-text {
+  @apply mt-4 text-6xl leading-[72px] font-bold tracking-[-1.2px] text-gray-900;
+}
+
+.small-text {
+  @apply flex gap-2 text-sm font-medium text-primary;
+}
+
+
+@media (prefers-color-scheme: light) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #171717;
   }
 }
 
