--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,26 @@
   @apply flex gap-2 text-sm font-medium text-primary;
 }
 
+/* PRODUCT CARRS */
+
+.product-card {
+  @apply sm:w-[292px] sm:max-w-[292px] w-full flex-1 flex flex-col gap-4 rounded-md;
+}
+
+.product-card_img-container {
+  @apply flex-1 relative flex flex-col gap-5 p-4 rounded-md;
+}
+
+.product-card_img {
+  @apply max-h-[250px] object-contain w-full h-full bg-transparent;
+}
+
+.product-title {
+  @apply text-secondary text-xl leading-6 font-semibold truncate;
+}
+
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
