--- a/app/globals.css
+++ b/app/globals.css
@@ -118,7 +118,7 @@
 
 /* MODAL */
 .dialog-container {
-  @apply fixed inset-0 z-10 overflow-y-auto bg-black bg-opacity-25;
+  @apply fixed inset-0 z-10 overflow-y-auto bg-black opacity-25;
 }
 
 .dialog-content {
